--- a/curriculum.html
+++ b/curriculum.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
 </head>
 
 <header>
@@ -27,7 +32,7 @@
 
 <section>
    <h2>Work Experience</h2>
-      <ol> 
+      <ol
         <li><h3>Retail Sales Associate</h3>
             <div class="company">Crystal Bridges and The Momentary</div>
             <div class="date">July 2021 - July 2023</div>
@@ -87,6 +92,7 @@
             </ul>
         </div>
     </div>
+
 
     <div class="skill-category">
         <h3>Creative Skills</h3>
